# serializer version: 1
# name: test_setup_binary_sensors_alt[is_burning][binary_sensor.boiler_burner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_burner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Burner',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_burning',
    'unique_id': 'c0ffeec0ffee_is_burning',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_burning][binary_sensor.boiler_burner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Burner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_burner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_binary_sensors_alt[is_burning][binary_sensor.boiler_fault-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_fault',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Fault',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fault',
    'unique_id': 'c0ffeec0ffee_failed',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_burning][binary_sensor.boiler_fault-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'fault_code': 'none',
      'friendly_name': 'Boiler Fault',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_fault',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_burning][binary_sensor.boiler_hot_water_tap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Hot water tap',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_tapping',
    'unique_id': 'c0ffeec0ffee_is_tapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_burning][binary_sensor.boiler_hot_water_tap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Hot water tap',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_burning][binary_sensor.boiler_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Pump',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_pumping',
    'unique_id': 'c0ffeec0ffee_is_pumping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_burning][binary_sensor.boiler_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_failed][binary_sensor.boiler_burner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_burner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Burner',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_burning',
    'unique_id': 'c0ffeec0ffee_is_burning',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_failed][binary_sensor.boiler_burner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Burner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_burner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_failed][binary_sensor.boiler_fault-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_fault',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Fault',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fault',
    'unique_id': 'c0ffeec0ffee_failed',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_failed][binary_sensor.boiler_fault-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'fault_code': <FaultCode.CV_TEMPERATURE_TOO_HIGH_E1: 1>,
      'friendly_name': 'Boiler Fault',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_fault',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_binary_sensors_alt[is_failed][binary_sensor.boiler_hot_water_tap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Hot water tap',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_tapping',
    'unique_id': 'c0ffeec0ffee_is_tapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_failed][binary_sensor.boiler_hot_water_tap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Hot water tap',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_failed][binary_sensor.boiler_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Pump',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_pumping',
    'unique_id': 'c0ffeec0ffee_is_pumping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_failed][binary_sensor.boiler_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_pumping][binary_sensor.boiler_burner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_burner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Burner',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_burning',
    'unique_id': 'c0ffeec0ffee_is_burning',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_pumping][binary_sensor.boiler_burner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Burner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_burner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_pumping][binary_sensor.boiler_fault-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_fault',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Fault',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fault',
    'unique_id': 'c0ffeec0ffee_failed',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_pumping][binary_sensor.boiler_fault-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'fault_code': 'none',
      'friendly_name': 'Boiler Fault',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_fault',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_pumping][binary_sensor.boiler_hot_water_tap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Hot water tap',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_tapping',
    'unique_id': 'c0ffeec0ffee_is_tapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_pumping][binary_sensor.boiler_hot_water_tap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Hot water tap',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_pumping][binary_sensor.boiler_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Pump',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_pumping',
    'unique_id': 'c0ffeec0ffee_is_pumping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_pumping][binary_sensor.boiler_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_binary_sensors_alt[is_tapping][binary_sensor.boiler_burner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_burner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Burner',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_burning',
    'unique_id': 'c0ffeec0ffee_is_burning',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_tapping][binary_sensor.boiler_burner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Burner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_burner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_tapping][binary_sensor.boiler_fault-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_fault',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Fault',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fault',
    'unique_id': 'c0ffeec0ffee_failed',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_tapping][binary_sensor.boiler_fault-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'fault_code': 'none',
      'friendly_name': 'Boiler Fault',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_fault',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_binary_sensors_alt[is_tapping][binary_sensor.boiler_hot_water_tap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Hot water tap',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_tapping',
    'unique_id': 'c0ffeec0ffee_is_tapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_tapping][binary_sensor.boiler_hot_water_tap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Hot water tap',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_binary_sensors_alt[is_tapping][binary_sensor.boiler_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Pump',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_pumping',
    'unique_id': 'c0ffeec0ffee_is_pumping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_binary_sensors_alt[is_tapping][binary_sensor.boiler_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_platform[binary_sensor.boiler_burner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_burner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Burner',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_burning',
    'unique_id': 'c0ffeec0ffee_is_burning',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_platform[binary_sensor.boiler_burner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Burner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_burner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_platform[binary_sensor.boiler_fault-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_fault',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Fault',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fault',
    'unique_id': 'c0ffeec0ffee_failed',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_platform[binary_sensor.boiler_fault-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'fault_code': 'none',
      'friendly_name': 'Boiler Fault',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_fault',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_platform[binary_sensor.boiler_hot_water_tap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Hot water tap',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_tapping',
    'unique_id': 'c0ffeec0ffee_is_tapping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_platform[binary_sensor.boiler_hot_water_tap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Hot water tap',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_hot_water_tap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_platform[binary_sensor.boiler_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.boiler_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Pump',
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_pumping',
    'unique_id': 'c0ffeec0ffee_is_pumping',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_platform[binary_sensor.boiler_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Boiler Pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.boiler_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
